--- a/adam_asmaca.ipynb
+++ b/adam_asmaca.ipynb
@@ -6,7 +6,7 @@
       "name": "adam_asmaca.jpynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNlQ622jAOyOdlq1sVov0Z2",
+      "authorship_tag": "ABX9TyMnxHtPuNYj6KM04UmXAd3M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,14 +30,14 @@
       "metadata": {
         "id": "RKUg8oHrdW6h",
         "colab_type": "code",
-        "outputId": "039bb139-92e8-49f0-ee87-e972cd06b7ce",
+        "outputId": "477296df-0720-47b0-b047-dcce06b9ef06",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 561
+          "height": 206
         }
       },
       "source": [
-        "from random import randint\n",
+        " import random\n",
         "\n",
         "\n",
         "\n",
@@ -49,7 +49,7 @@
         "  break\n",
         "\n",
         "\n",
-        "kelimeler = choice  ( [\"armut\",\"istanbul\",\"Malatya\",\"karpuz\"] )\n",
+        "kelimeler = random.choice( [\"armut\",\"istanbul\",\"Malatya\",\"karpuz\"] )\n",
         "kelimeler = kelimeler.upper()\n",
         "harfsayisi = len(kelimeler)\n",
         "print(\"\\nkelimemiz {} harflidir.\\n\\n\".format(harfsayisi))\n",
@@ -120,30 +120,7 @@
             "\n",
             "\n",
             "kelimeyi tahmin ediniz ________\n",
-            "3 canın kaldı\n",
-            "bir harf tahmin et\n",
-            ">>>a\n",
-            "dogru bravo..A harfi kelimemiz içerisinde 1 kere geçiyor\n",
-            "kelimeyi tahmin ediniz ___A____\n",
-            "3 canın kaldı\n",
-            "bir harf tahmin et\n",
-            ">>>i\n",
-            "dogru bravo..I harfi kelimemiz içerisinde 1 kere geçiyor\n",
-            "kelimeyi tahmin ediniz I__A____\n",
-            "3 canın kaldı\n",
-            "bir harf tahmin et\n",
-            ">>>s\n",
-            "dogru bravo..S harfi kelimemiz içerisinde 1 kere geçiyor\n",
-            "kelimeyi tahmin ediniz IS_A____\n",
-            "3 canın kaldı\n",
-            "bir harf tahmin et\n",
-            ">>>t\n",
-            "dogru bravo..T harfi kelimemiz içerisinde 1 kere geçiyor\n",
-            "kelimeyi tahmin ediniz ISTA____\n",
-            "3 canın kaldı\n",
-            "bir harf tahmin et\n",
-            ">>>istanbul\n",
-            "bravo\n"
+            "3 canın kaldı\n"
           ],
           "name": "stdout"
         }
